--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^21.0.1",
     "@angular/platform-browser-dynamic": "^21.0.1",
     "@angular/router": "^21.0.1",
+    "@stomp/rx-stomp": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0"
   },
